visibility issue

--- a/admin/client/scss/all.scss
+++ b/admin/client/scss/all.scss
@@ -2,4 +2,5 @@
 
 .MsoNormal span {
   opacity: 1 !important;
+  visibility: visible !important;
 }
