--- a/user/client/scss/ui.scss
+++ b/user/client/scss/ui.scss
@@ -114,4 +114,5 @@ button {
 
 .MsoNormal span {
   opacity: 1 !important;
+  visibility: visible !important;
 }
